Changed after code-review. Fixed font connection mistake, changed layout in cover on flexbox, fixed scrool overflow in cover and heading sections.

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,9 +1,11 @@
 .cover__link {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
