--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,6 +4,11 @@
   height: calc(240px + 25 * 100vw / 64);
   background-image: url('../../images/cover-trains.jpg');
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .cover::after {
@@ -23,7 +28,7 @@ transition: all 0.7s ease-in;
 
 @media screen and (max-width: 1024px) {
   .cover {
-    width: 100vw;
+    width: 100%;
     height: calc(5 * 100vw / 8);
 
   }
