--- a/blocks/heading/__image-route/heading__image-route.css
+++ b/blocks/heading/__image-route/heading__image-route.css
@@ -2,7 +2,7 @@
   background-image: url('../../../images/route.svg');
   background-repeat: no-repeat;
   background-size: contain;
-  width: calc(670.44px + 5333 * 100vw / 25600);
+  width: calc(670.44px + 5333 * 100% / 25600);
   height: calc(188.14px + 1497 * 100vw / 25600);
   z-index: 2;
   position: absolute;
@@ -15,7 +15,7 @@
 @media screen and (min-width: 768px) and (max-width: 1024px)
 {
   .heading__image-route {
-    width: calc(76 * 100vw / 256 + 512px);
+    width: calc(76 * 100% / 256 + 512px);
     height: calc(43 * 100vw / 256 + 76px);
     top: calc(15 * 100vw / 256 + 25px);
     left: calc(100vw / 64 + 6px);
